<?xml version="1.0"?>
<package format="2">
  <name>sample_package</name>
  <version>0.0.0</version>
  <description>The sample package</description>

  <maintainer email="tara@todo.todo">tara</maintainer>


  <license>TODO</license>


  <build_depend>message_generation</build_depend> 

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>

  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>turtlebot3_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend> 
  <exec_depend> sensor_msgs</exec_depend> 
  <exec_depend> geometry_msgs</exec_depend> 
  <exec_depend> turtlebot3_msgs </exec_depend>

  <export>

  </export>
</package>
